<resources>
    <string name="app_name">Bencanalytical</string>
    <string name="title_activity_maps">Map</string>
    <string name="tvLogin">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="tvRegister">Register</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>

    <string name="title_pengaduan">Pengaduan</string>
    <string name="title_bencana">Bencana</string>
    <string name="title_profile">Profile</string>
    <string name="dipublikasikan">Dilaporkan Oleh</string>
    <string name="deskripsi">Deskripsi Lokasi</string>
    <string name="deskripsikejadian">Deskripsi Kejadian</string>
    <string name="namaBencana">Nama Bencana</string>
    <string name="koordinat">Koordinat</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="userprofile">Profile</string>
    <string name="phone">Phone</string>
    <string name="alamat">Address</string>
    <string name="editProfile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_cuaca">Cuaca</string>
    <string name="rincian">Rincian</string>
    <string name="angin">Kecepatan Angin</string>
    <string name="terasa">Terasa Seperti</string>
    <string name="kelembaban">Kelembaban</string>
    <string name="tekanan">Tekanan</string>
</resources>