<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_bencana">

    <fragment
        android:id="@+id/navigation_pengaduan"
        android:name="com.example.bencanalytical.ui.pengaduan.PengaduanFragment"
        android:label="@string/title_pengaduan"
        tools:layout="@layout/fragment_pengaduan" />

    <fragment
        android:id="@+id/navigation_bencana"
        android:name="com.example.bencanalytical.ui.bencana.BencanaFragment"
        android:label="@string/title_bencana"
        tools:layout="@layout/fragment_bencana" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.bencanalytical.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>