<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:src="@drawable/ic_rounded_bottom"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userprofile"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/imgAvatar"
            app:layout_constraintTop_toTopOf="@+id/view4" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAvatar"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/avatar"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/view4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toBottomOf="@id/view4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:padding="@dimen/margin_padding_16dp"
            app:layout_constraintTop_toBottomOf="@+id/imgAvatar">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAllCaps="true"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_4dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/username" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:background="#40000000"
                app:layout_constraintTop_toBottomOf="@id/tvUsername" />

            <TextView
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:text="@string/fullname"
                android:textAllCaps="true"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/divider1" />

            <TextView
                android:id="@+id/tvFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_4dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/fullname" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:background="#40000000"
                app:layout_constraintTop_toBottomOf="@id/tvFullname" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:text="@string/phone"
                android:textAllCaps="true"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/divider2" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_4dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/phone" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:background="#40000000"
                app:layout_constraintTop_toBottomOf="@id/tvPhone" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/divider3" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_4dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/email" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:background="#40000000"
                app:layout_constraintTop_toBottomOf="@id/tvEmail" />

            <TextView
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:text="@string/alamat"
                android:textAllCaps="true"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/divider4" />

            <TextView
                android:id="@+id/tvAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_4dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/alamat" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:background="#40000000"
                app:layout_constraintTop_toBottomOf="@id/tvAlamat" />

            <Button
                android:textColor="@android:color/white"
                android:id="@+id/btnEdtProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/editProfile"
                app:layout_constraintStart_toStartOf="@+id/divider5"
                app:layout_constraintTop_toBottomOf="@+id/divider5"
                app:layout_constraintWidth_percent="0.45" />

            <Button
                android:textColor="@android:color/white"
                android:id="@+id/btnLogout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/logout"
                app:layout_constraintEnd_toEndOf="@+id/divider5"
                app:layout_constraintTop_toBottomOf="@+id/divider5"
                app:layout_constraintWidth_percent="0.45" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>