<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahPengaduanActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_padding_8dp"
        android:paddingBottom="@dimen/margin_padding_16dp">

        <ImageView
            android:id="@+id/imgBencana"
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:scaleType="centerCrop"
            android:src="#4D000000"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp" />

        <ImageView
            android:id="@+id/ic_Camera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_camera_alt_24"
            app:layout_constraintBottom_toBottomOf="@+id/imgBencana"
            app:layout_constraintEnd_toEndOf="@+id/imgBencana"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgBencana" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_16dp"
            android:hint="@string/namaBencana"
            app:layout_constraintTop_toBottomOf="@+id/imgBencana"
            tools:layout_editor_absoluteX="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNamaBencana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_16dp"
            android:hint="@string/koordinat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField"
            app:layout_constraintWidth_percent="0.85">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtKoordinat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btnCurrentLocation"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/margin_padding_4dp"
            android:background="@drawable/ic_bg_outlined"
            android:src="@drawable/ic_baseline_add_location_24"
            app:layout_constraintBottom_toBottomOf="@+id/textField2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textField2"
            app:layout_constraintTop_toTopOf="@+id/textField2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/deskripsi"
            app:layout_constraintTop_toBottomOf="@id/textField2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="6" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/deskripsikejadian"
            app:layout_constraintTop_toBottomOf="@id/textField3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtKejadian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="12" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/tambahBencana"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:text="@string/tambahkan"
            app:layout_constraintTop_toBottomOf="@id/textField4"
            tools:layout_editor_absoluteX="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>