<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailBencanaActivity">

    <ImageView
        android:id="@+id/imgBencana"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:background="#4D000000"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ProgressBar-->
<!--        android:id="@+id/progress"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/imgTanaman"-->
<!--        app:layout_constraintTop_toTopOf="@+id/imgTanaman" />-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:background="@drawable/ic_rounded_top"
            android:padding="@dimen/margin_padding_16dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvNamaBencana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAllCaps="true"
                android:textColor="#E6000000"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Banjir Bandang" />

            <TextView
                android:id="@+id/tvTanggalPublikasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_4dp"
                app:layout_constraintEnd_toEndOf="@+id/tvNamaBencana"
                app:layout_constraintStart_toStartOf="@+id/tvNamaBencana"
                app:layout_constraintTop_toBottomOf="@+id/tvNamaBencana"
                tools:text="3 Oktober 2000" />

            <TextView
                android:id="@+id/Dipublikasikan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:text="@string/dipublikasikan"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvTanggalPublikasi" />

            <TextView
                android:textAllCaps="true"
                android:id="@+id/tvDipublikasikan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/Dipublikasikan"
                tools:text="ADMIN" />

            <TextView
                android:id="@+id/DeskripsiLokasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:text="@string/deskripsi"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvDipublikasikan"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/tvDeskripsiLokasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="3dp"
                app:layout_constraintTop_toBottomOf="@+id/DeskripsiLokasi"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/DeskripsiKejadian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:text="@string/deskripsikejadian"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvDeskripsiLokasi"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/tvDeskripsiKejadian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="3dp"
                app:layout_constraintTop_toBottomOf="@+id/DeskripsiKejadian"
                tools:text="@tools:sample/lorem/random" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>